use deno fmt for formatter

--- a/gh-wiki-backup/package.json
+++ b/gh-wiki-backup/package.json
@@ -9,7 +9,8 @@
     "dev": "vite build --watch --mode development --outDir dist-dev",
     "build:next": "vite build --outDir dist-next",
     "build:stable": "vite build --outDir dist",
-    "build": "pnpm build:next"
+    "build": "pnpm build:next",
+    "format": "deno fmt"
   },
   "devDependencies": {
     "idb-keyval": "^6.2.0",
