patch dist for user friendly userscript name

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,7 @@
 {
   "deno.enable": false,
+  // deno.enablePaths does not support glob
+  "deno.enablePaths": ["./gh-wiki-backup/scripts"],
   "editor.formatOnSave": true,
   "editor.defaultFormatter": "denoland.vscode-deno",
   "[typescript]": {
