switch to published fork version
installing directly from forked repo causes OOM when installing first time

--- a/gh-wiki-backup/package.json
+++ b/gh-wiki-backup/package.json
@@ -13,9 +13,9 @@
     "format": "deno fmt"
   },
   "devDependencies": {
+    "@darcien/vite-userscript-plugin": "^1.9.0",
     "idb-keyval": "^6.2.0",
     "typescript": "^5.0.2",
-    "vite": "^4.3.2",
-    "vite-userscript-plugin": "github:darcien/vite-userscript-plugin"
+    "vite": "^4.3.2"
   }
 }
