--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,7 +3,18 @@
   // deno.enablePaths does not support glob
   "deno.enablePaths": ["./gh-wiki-backup/scripts"],
   "editor.formatOnSave": true,
-  "editor.defaultFormatter": "denoland.vscode-deno",
+  "[javascript]": {
+    "editor.defaultFormatter": "denoland.vscode-deno"
+  },
+  "[json]": {
+    "editor.defaultFormatter": "denoland.vscode-deno"
+  },
+  "[jsonc]": {
+    "editor.defaultFormatter": "denoland.vscode-deno"
+  },
+  "[markdown]": {
+    "editor.defaultFormatter": "denoland.vscode-deno"
+  },
   "[typescript]": {
     "editor.defaultFormatter": "denoland.vscode-deno"
   }
